--- a/Bonsai.OpenNI/Bonsai.OpenNI.csproj
+++ b/Bonsai.OpenNI/Bonsai.OpenNI.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="Accord.Statistics" Version="3.8.0" />
     <PackageReference Include="Bonsai.Core" Version="2.5.0" />
     <PackageReference Include="NiWrapper.Net.x64" Version="2.2.0.35" />
     <PackageReference Include="OpenCV.Net" Version="3.3.1" />
